syntax = "proto3";

package bbejeck.Stateful-KStream.proto;
option java_multiple_files = true;
option java_outer_classname = "PatternProto";

message Pattern {
   string zipCode = 1;
   string item = 2;
   int64 date = 3;
   double amount = 4;
}